--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -133,11 +133,11 @@ ol{
     margin: 20px;
 }
 
-.outerimgbox , .topimgbox,  .bottomimgbox,  .accimgbox,  .shoesimgbox{
+.outerimgbox , .topimgbox,  .bottomimgbox,  .accimgbox,  .shoesimgbox {
 
     writing-mode:vertical-lr;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
 }
 
 .vertical-data{
@@ -366,4 +366,10 @@ ol{
     width: 600px;
     height: 100px;
     margin: 15px 15px 15px -10px;
+}
+
+#codyContainer{
+    text-align: center;
+    width: 900px;
+    height: 300px;
 }
