--- a/src/main/resources/templates/view/cody.html
+++ b/src/main/resources/templates/view/cody.html
@@ -44,6 +44,7 @@
                 </div>
                 <br/><br/>
                 <input type="button" th:id="submit_btn" class="btn btn-light" value="submit">
+            </div>
         </form>
         <br/><br/>
 
