--- a/src/main/resources/templates/view/cody.html
+++ b/src/main/resources/templates/view/cody.html
@@ -91,7 +91,7 @@
         <button type="button" class="btn btn-light" onclick="navEvent('acc-id')">ACC</button>
     </div>
 
-    <div class="likeListForCody">
+    <div class="container px-5 py-5">
         <!--                아우터-->
         <div class="likeList row" id="outerList" style="display: none">
             <li th:if="${outerList.size()== 0}">Add Outer List</li>
