--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oi&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
 
 * {
     margin: 0;
@@ -39,16 +39,29 @@ body {
 
 
 #logo{
-    color: white;
-    font-family: 'Oi', cursive;
+    padding-top: 70px;
+    font-size: 5.0em;
+    color: black;
+    font-family: 'Permanent Marker', cursive;
+    margin-bottom: 50px;
+}
+
+#bigLogo{
+    margin-top: 100px;
+    font-size: 9.0em;
+    font-family: "Permanent Marker", cursive;
+    text-shadow: 0px 0px 0px 5px grey;
+
 }
 
 #headlogo{
-    margin-top: 50px;
-    height: 280px;
+    background-color: darkgray;
+    font-family: "Permanent Marker", cursive;
+    height: 300px;
 }
 
 #navlogo{
+    font-family: "Permanent Marker", cursive;
     font-size: 1.0em;
     font-weight: 700;
     margin-top: 25px;
@@ -56,10 +69,24 @@ body {
     margin-left: 20px;
 }
 
+.pageLogo{
+    font-family: "Permanent Marker", cursive;
+    margin-left: 25px;
+    margin-top: 50px;
+}
+
+
+
 table {
     border-spacing: 0;
     border-collapse: collapse;
 }
+
+.xs{
+    text-align: left;
+    font-size: 0.8rem;
+}
+
 
 td {
     text-align: left;
@@ -192,6 +219,7 @@ ol{
 }
 
 #navbar{
+    background-color: darkgray;
     height: 70px;
 }
 
@@ -218,14 +246,17 @@ ol{
     margin-left: 20%;
 }
 
+#searchType{
+    margin: 10px;
+}
+
+
 #navbar_right{
     margin-top: 7px;
     display: inline;
     float: right;
-    text-align: right;
     font-weight: 700;
     font-size: 1.0em;
-    margin-left: 30%;
 }
 
 #carousel{
@@ -233,18 +264,30 @@ ol{
     height: 250px;
 }
 
+.user{
+    display: inline;
+    text-decoration: black;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+#memberInfo{
+    color: darkgrey;
+}
+
 
 #pagebox{
-    width: 1500px;
+    width: 95%;
 }
 
 
 #logoutbtn{
     /*margin-top: 7px;*/
-    background-color: white;
+    background-color: rgba( 255, 255, 255, 0 );
     color: grey;
-    margin-left: 10px;
-    font-weight: 600;
+    margin-top: 5px;
+    margin-left: 7px;
+    font-weight: 400;
     font-size: 1.0em;
 }
 
@@ -364,6 +407,56 @@ ol{
 
 #likeinfo{
     display: inline;
+}
+
+#likeitem_table {
+    text-align: center;
+    width: 70%;
+    margin-left: 10%;
+}
+
+#likeitem_div{
+    padding-left: 80px;
+    padding-right: 80px;
+}
+
+.col-4{
+    max-width: 350px;
+    margin-bottom: 20px;
+}
+
+#likeitem_imgbox{
+    display: inline;
+    margin: 15px;
+    width: 210px;
+    height: 210px;
+    text-align: center;
+
+}
+
+#likeitem_img{
+    margin-left: 60px;
+    display: block;
+    border: 1px solid darkgrey;
+    border-radius: 100px;
+    width: 200px;
+    height:200px;
+    text-align: center;
+}
+
+#likeitem_info{
+    text-align: left;
+    width: 210px;
+}
+
+#likeitem_name{
+    margin-top: 15px;
+    margin-left: 60px;
+    width: 50px;
+}
+
+#likeitem_price{
+    margin-left: 60px;
 }
 
 #buyandcartbtn{
