--- a/src/main/resources/templates/view/cody.html
+++ b/src/main/resources/templates/view/cody.html
@@ -7,81 +7,98 @@
     <div class="row justify-content-center py-5">
         <form class="needs-validation" th:id="codyForm" th:action="@{/cody}" th:object="${codyForm}" method="post"
               novalidate>
-            <!--            <div class="container">-->
-
-            <!--                <div class="row" style="position: relative; height: 500px; width: 500px; border:1px solid black;">-->
-            <!--                    <div class="col" style="position: absolute">-->
-            <!--                        <img th:id="outerCody" class="imgbox_middle" >-->
-            <!--                    </div>-->
-            <!--                    <div class="col" style="position: absolute">-->
-            <!--                        <img th:id="topCody" class="imgbox_middle">-->
-            <!--                    </div>-->
-            <!--                    <div class="w-100" style="position: absolute"></div>-->
-            <!--                    <div class="col" style="position: absolute">-->
-            <!--                        <img th:id="topCody" class="imgbox_middle">-->
-            <!--                    </div>-->
-            <!--                    <div class="col" style="position: absolute">-->
-            <!--                        <img th:id="accCody" class="imgbox_middle">-->
-            <!--                    </div>-->
-            <!--                    <div class="col" style="position: absolute">-->
-            <!--                        <img th:id="shoesCody" class="imgbox_middle">-->
-            <!--                    </div>-->
-            <!--                </div>-->
-            <!--            </div>-->
-
-            <table class="table table-bordered">
-                <thead>
-                <tr>
-                    <th width="20%">아우터</th>
-                    <th width="20%">상의</th>
-                    <th width="20%">하의</th>
-                    <th width="20%">가방</th>
-                    <th width="20%">신발</th>
-                </tr>
-                </tr>
-                </thead>
-
-                <tbody>
-                <tr>
-                    <!--                아우터-->
-                    <td>
-                        <img th:id="outerCody" class="imgbox_middle" >
+            <div class="container" style="position: relative; height: 500px; width: 500px; border:1px solid black;">
+                <div class="row">
+                    <div class="col" style="position: absolute;border:0px">
+                        <img th:id="outerCody" class="imgbox_middle">
                         <input th:id="outerId" type="hidden" th:attr="name='outerId'"></input>
-                    </td>
-                    <!--                상의-->
-                    <td>
+                    </div>
+                </div>
+                <div class="row" style="position: relative; height: 500px; width: 500px; border:1px solid black;">
+                    <div class="col" style="position: absolute;border:0px">
                         <img th:id="topCody" class="imgbox_middle">
                         <input th:id="topId" type="hidden" th:attr="name='topId'"></input>
-                    </td>
+                    </div>
+                </div>
+                <div class="w-100" style="position: absolute"></div>
 
-                    <!--                                하의-->
-                    <td>
+                <div class="row" style="position: relative; height: 500px; width: 500px; border:1px solid black;">
+                    <div class="col" style="position: absolute;border:0px">
                         <img th:id="bottomCody" class="imgbox_middle">
                         <input th:id="bottomId" type="hidden" th:attr="name='bottomId'"></input>
-                    </td>
-                    <!--                가방-->
-                    <td>
+                    </div>
+                </div>
+                <div class="row" style="position: relative; height: 500px; width: 500px; border:1px solid black;">
+                    <div class="col" style="position: absolute;border:0px">
                         <img th:id="accCody" class="imgbox_middle">
                         <input th:id="accId" type="hidden" th:attr="name='accId'"></input>
-                    </td>
-
-                    <!--                신발-->
-                    <td>
+                    </div>
+                </div>
+                <div class="row" style="position: relative; height: 500px; width: 500px; border:1px solid black;">
+                    <div class="col" style="position: absolute;border:0px">
                         <img th:id="shoesCody" class="imgbox_middle">
-
                         <input th:id="shoesId" type="hidden" th:attr="name='shoesId'"></input>
-                    </td>
-                </tr>
+                    </div>
+                </div>
+            </div>
 
-                <tr>
-                    <input type="button" th:id="submit_btn" class="w-50 btn btn-dark btn-lg" value="submit">
-                </tr>
-            </table>
+            <input type="button" th:id="submit_btn" class="w-50 btn btn-dark btn-lg" value="submit">-->
 
-            </tbody>
+            <!--            <table class="table table-bordered">-->
+            <!--                <thead>-->
+            <!--                <tr>-->
+            <!--                    <th width="20%">아우터</th>-->
+            <!--                    <th width="20%">상의</th>-->
+            <!--                    <th width="20%">하의</th>-->
+            <!--                    <th width="20%">가방</th>-->
+            <!--                    <th width="20%">신발</th>-->
+            <!--                </tr>-->
+            <!--                </tr>-->
+            <!--                </thead>-->
+
+            <!--                <tbody>-->
+            <!--                <tr>-->
+            <!--                    &lt;!&ndash;                아우터&ndash;&gt;-->
+            <!--                    <td>-->
+            <!--                        <img th:id="outerCody" class="imgbox_middle" >-->
+            <!--                        <input th:id="outerId" type="hidden" th:attr="name='outerId'"></input>-->
+            <!--                    </td>-->
+            <!--                    &lt;!&ndash;                상의&ndash;&gt;-->
+            <!--                    <td>-->
+            <!--                        <img th:id="topCody" class="imgbox_middle">-->
+            <!--                        <input th:id="topId" type="hidden" th:attr="name='topId'"></input>-->
+            <!--                    </td>-->
+
+            <!--                    &lt;!&ndash;                                하의&ndash;&gt;-->
+            <!--                    <td>-->
+            <!--                        <img th:id="bottomCody" class="imgbox_middle">-->
+            <!--                        <input th:id="bottomId" type="hidden" th:attr="name='bottomId'"></input>-->
+            <!--                    </td>-->
+            <!--                    &lt;!&ndash;                가방&ndash;&gt;-->
+            <!--                    <td>-->
+            <!--                        <img th:id="accCody" class="imgbox_middle">-->
+            <!--                        <input th:id="accId" type="hidden" th:attr="name='accId'"></input>-->
+            <!--                    </td>-->
+
+            <!--                    &lt;!&ndash;                신발&ndash;&gt;-->
+            <!--                    <td>-->
+            <!--                        <img th:id="shoesCody" class="imgbox_middle">-->
+
+            <!--                        <input th:id="shoesId" type="hidden" th:attr="name='shoesId'"></input>-->
+            <!--                    </td>-->
+            <!--                </tr>-->
+
+            <!--                <tr>-->
+            <!--                    <input type="button" th:id="submit_btn" class="w-50 btn btn-dark btn-lg" value="submit">-->
+            <!--                </tr>-->
+            <!--            </table>-->
+
+            <!--            </tbody>-->
 
 
         </form>
+    </div>
+
 
         <table class="table table-bordered">
             <thead>
@@ -196,7 +213,6 @@
             var shoesId = document.querySelector("#shoesId");
 
 
-
             for (var i = 0; i < outerbox.length; i++) {
                 outerbox[i].addEventListener("click", changepic);
             }
@@ -221,32 +237,32 @@
 
                 if (this.getAttribute("class") == "shoesimgbox") {
                     shoesCody.setAttribute("src", pickSrc);
-                    shoesId.setAttribute("value",pickAlt);
+                    shoesId.setAttribute("value", pickAlt);
                     console.log(shoesId.getAttribute(value))
                 }
 
                 if (this.getAttribute("class") == "outerimgbox") {
                     outerCody.setAttribute("src", pickSrc);
-                    outerId.setAttribute("value",pickAlt);
+                    outerId.setAttribute("value", pickAlt);
                     console.log(shoesId.getAttribute(value))
                 }
                 ;
 
                 if (this.getAttribute("class") == "topimgbox") {
                     topCody.setAttribute("src", pickSrc);
-                    topId.setAttribute("value",pickAlt);
+                    topId.setAttribute("value", pickAlt);
                     console.log(shoesId.getAttribute(value))
                 }
                 ;
                 if (this.getAttribute("class") == "bottomimgbox") {
                     bottomCody.setAttribute("src", pickSrc);
-                    bottomId.setAttribute("value",pickAlt);
+                    bottomId.setAttribute("value", pickAlt);
                     console.log(shoesId.getAttribute(value))
                 }
                 ;
                 if (this.getAttribute("class") == "accimgbox") {
                     accCody.setAttribute("src", pickSrc);
-                    accId.setAttribute("value",pickAlt);
+                    accId.setAttribute("value", pickAlt);
                     console.log(shoesId.getAttribute(value))
                 }
                 ;
@@ -258,5 +274,4 @@
 
     </script>
 </div>
-
 </html>
