--- a/src/main/resources/static/css/common/common.css
+++ b/src/main/resources/static/css/common/common.css
@@ -6,6 +6,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oi&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
 
 * {
     margin: 0;
@@ -42,26 +43,26 @@ body {
     padding-top: 70px;
     font-size: 5.0em;
     color: black;
-    font-family: 'Permanent Marker', cursive;
+    font-family: 'Rock Salt', cursive;
     margin-bottom: 50px;
 }
 
 #bigLogo{
     margin-top: 100px;
     font-size: 9.0em;
-    font-family: "Permanent Marker", cursive;
+    font-family: "Rock Salt", cursive;
     text-shadow: 0px 0px 0px 5px grey;
 
 }
 
 #headlogo{
     background-color: darkgray;
-    font-family: "Permanent Marker", cursive;
+    font-family: "Rock Salt", cursive;
     height: 300px;
 }
 
 #navlogo{
-    font-family: "Permanent Marker", cursive;
+    font-family: "Rock Salt", cursive;
     font-size: 1.0em;
     font-weight: 700;
     margin-top: 25px;
@@ -70,7 +71,7 @@ body {
 }
 
 .pageLogo{
-    font-family: "Permanent Marker", cursive;
+    font-family: "Rock Salt", cursive;
     margin-left: 25px;
     margin-top: 50px;
 }
